[package]
name = "cashkit"
version = "0.1.0"
edition = "2021"
authors = ["Mohamad Al Zohbie <alzoubi528@gmail.com>"]
repository = "https://github.com/mohamadzoh/cashkit"
description = "A library that helps you work with Currency"
maintainer = "Mohamad Al Zohbie"
license = "MIT"
keywords = ["money", "currency", "exchange", "coin","number"]

[lib]
name = "cashkit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
